syntax = "proto3";

import "constants.proto";

message MarketEvent {
  enum EventType {
    PLACED = 0;
    CANCELLED = 1;
    FILLED = 2;
  }

  string event_id = 0;
  string order_id = 1;
  int32 timestamp = 2;
  EventType event_type = 3;
  int64 base_amount = 4;
  int64 counter_amount = 5;
  int64 fill_amount = 6;
  Side side = 7;
}

message WatchMarketRequest {
  string base_symbol = 0;
  string counter_symbol = 1;
  optional int64 last_updated = 2;
}

service OrderBook {
  rpc WatchMarket (WatchMarketRequest) returns (stream MarketEvent);
}
